--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,58 @@ body {
     font-size: 16px;
 }
 
+header{
+    background-color: white;
+    font-size: 18px;
+}
+
 .container {
     margin: 0 auto;
     max-width: 960px;
     width: 100%;
+    display: flex;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 18px;
+}
+
+ul {
+    margin: 12px;
+    list-style: none;
+    padding: 25px;
+    align-items: flex-end;
+}
+
+li {
+    display: inline-block;
+    padding: 5px;
+    color: #6b7280;
+
+}
+
+li:hover{
+    background-color: #5A67D8;
+}
+
+.overview-hero {
+    background-color: #E2E8F0;
+}
+
+.learn-about .h2{
+    font-size: 24px;
+    color: #48BB78;
+}
+
+.learn-about .container{
+    display: grid;
+    grid-template-columns: 200px 200px 200px;
+    grid-gap: 5px;
+
+}
+
+.overview-hero-image{
+    float: left;
+}
+
+.overview-hero-text{
+    float: right;
 }
