--- a/styles.css
+++ b/styles.css
@@ -6,11 +6,10 @@ body {
 
 header{
     background-color: white;
-    font-size: 18px;
 }
 
 .container {
-    margin: 0 auto;
+    margin: auto;
     max-width: 960px;
     width: 100%;
     display: flex;
@@ -18,30 +17,57 @@ header{
     font-size: 18px;
 }
 
-ul {
+header h1 {
+    font-size: 18px;
+}
+
+header a{
+    text-decoration: none;
+    color: #6b7280;
+}
+
+header .container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.container ul {
     margin: 12px;
     list-style: none;
     padding: 25px;
     align-items: flex-end;
 }
 
-li {
+.container li {
     display: inline-block;
     padding: 5px;
     color: #6b7280;
-
 }
 
-li:hover{
-    background-color: #5A67D8;
+.container nav{
+    display: inline;
+    margin: 0;
+    float: right;
 }
 
-.overview-hero {
+a:hover{
+    color: #5A67D8;
+}
+
+.overview-hero{
     background-color: #E2E8F0;
+}
+.overview-hero .container {
+    display: flex;
+    align-items: center;
 }
 
 .overview-hero-image{
     float: left;
+}
+.overview-hero-image img{
+    height: 300px;
+    width: 400px;
 }
 
 .overview-hero-text{
@@ -64,15 +90,13 @@ li:hover{
   border-radius: 5px;
   box-shadow: 2px 2px;
   width: 300px;
-  padding: 15px;
-  margin-top: 100px;
 }
 
 .learn-about .container .cards {
   display: grid;
   grid-template-rows: auto;
   grid-template-columns: auto auto auto; 
-  margin: 20 20px; 
+  margin: 20px 20px; 
   grid-gap: 10px;
   align-self: auto;
 }
@@ -82,10 +106,20 @@ li:hover{
     font-size: 21px;
 }
 
+.card-body {
+    padding: 15px;
+}
+
 .learn-about {
     padding-top: 20px;
     padding-bottom: 80px;
 }
+
+.learn-about .container{
+    display: flex;
+    flex-direction: column;
+}
+
 .testing {
     background-color: #4A5568;
     color: white;
@@ -93,27 +127,111 @@ li:hover{
     padding-bottom: 80px;
 }
 
+.testing-desciption{
+    width: 600px;
+}
+
 .btn {
     background-color: #48BB78;
     border-radius: 5px;
-    float: right;
-    padding: 10px;
+    padding: 10px 50px;
+    text-decoration: none;
+    text-align: center;
+    margin: auto 0 auto 50px;
+    color: white;
+    text-transform: uppercase;
 }
 
+.cta {
+    text-align: center;
+    margin: auto 0;
+}
+
+.stories .container{
+    display: flex;
+    flex-direction: column;
+}
 .stories img {
     border-radius: 50%;
     width: 250px;
     height: 250px;
     padding: 10px;
-    float: left;
     padding-top: 20px;
+    display: flex;
+    flex-direction: column;
 }
 
-.stories .container {
-    padding: 20px;
+article {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 15px;
+}
+
+.article-body a{
+    text-decoration: none;
+    color: #5A67D8;
+    font-weight: bold;
+}
+
+.stories {
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .article-body {
     float: right;
     padding-left: 20px;
+}
+
+.stories h2{
+    justify-content: flex-start;
+    color: #5A67D8;
+    margin-right: auto;
+}
+
+.newsletter {
+    margin: auto;
+    background-color: #48BB78;
+    color: white;
+}
+
+.newsletter .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 600px;
+}
+
+form {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+#email {
+    height: 50px;
+    width: 300px;
+    border-radius: 10px;
+    border: none;
+    text-indent: 15px;
+}
+
+.newsletter .btn{
+    border: none;
+    background-color: #5A67D8;
+    height: 50px;
+    width: 200px;
+    border-radius: 10px;
+}
+
+form {
+    margin-bottom: 50px;
+}
+
+footer {
+    background-color: #4A5568;
+    color: white;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
