--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,8 @@ body {
     font-size: 16px;
 }
 
+
+/* HEADER */
 header{
     background-color: white;
 }
@@ -17,6 +19,12 @@ header{
     font-size: 18px;
 }
 
+header .container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
 header h1 {
     font-size: 18px;
 }
@@ -24,18 +32,7 @@ header h1 {
 header a{
     text-decoration: none;
     color: #6b7280;
-}
-
-header .container{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.container ul {
-    margin: 12px;
-    list-style: none;
-    padding: 25px;
-    align-items: flex-end;
+    font-weight: bold;
 }
 
 .container li {
@@ -44,16 +41,15 @@ header .container{
     color: #6b7280;
 }
 
-.container nav{
-    display: inline;
-    margin: 0;
-    float: right;
-}
-
 a:hover{
     color: #5A67D8;
 }
 
+
+
+
+
+/* OVERVIEW HERO */
 .overview-hero{
     background-color: #E2E8F0;
 }
@@ -65,6 +61,7 @@ a:hover{
 .overview-hero-image{
     float: left;
 }
+
 .overview-hero-image img{
     height: 300px;
     width: 400px;
@@ -74,22 +71,30 @@ a:hover{
     float: right;
 }
 
+
+
+
+/* LEARN ABOUT */
 .learn-about h2{
     font-size: 24px;
     color: #48BB78;
 }
 
+.learn-about .container .card {
+    border: 2px solid ;
+    border-color: #E2E8F0;
+    border-radius: 5px;
+    box-shadow: 5px 5px #E2E8F0;
+    width: 300px;
+}
+
+.learn-about .container .cards .card .card-body h3{
+    color: #48BB78;
+    font-size: 21px;
+}
 .learn-about .container .card img {
   width: 300px;
   height: 200px;
-}
-
-.learn-about .container .card {
-  border: 2px solid ;
-  border-color: #E2E8F0;
-  border-radius: 5px;
-  box-shadow: 2px 2px;
-  width: 300px;
 }
 
 .learn-about .container .cards {
@@ -99,11 +104,6 @@ a:hover{
   margin: 20px 20px; 
   grid-gap: 10px;
   align-self: auto;
-}
-
-.learn-about .container .cards .card .card-body h3{
-    color: #48BB78;
-    font-size: 21px;
 }
 
 .card-body {
@@ -120,6 +120,10 @@ a:hover{
     flex-direction: column;
 }
 
+
+
+
+/* TESTING */
 .testing {
     background-color: #4A5568;
     color: white;
@@ -134,10 +138,10 @@ a:hover{
 .btn {
     background-color: #48BB78;
     border-radius: 5px;
-    padding: 10px 50px;
+    padding: 20px 50px;
     text-decoration: none;
     text-align: center;
-    margin: auto 0 auto 50px;
+    margin: auto 0 auto 150px;
     color: white;
     text-transform: uppercase;
 }
@@ -147,9 +151,14 @@ a:hover{
     margin: auto 0;
 }
 
+
+
+
+/* STORIES */
 .stories .container{
     display: flex;
     flex-direction: column;
+    margin-top: 70px ;
 }
 .stories img {
     border-radius: 50%;
@@ -189,10 +198,13 @@ article {
     margin-right: auto;
 }
 
+
+/* NEWSLETTER */
 .newsletter {
     margin: auto;
     background-color: #48BB78;
     color: white;
+    padding-top: 20px;
 }
 
 .newsletter .container {
@@ -229,6 +241,8 @@ form {
     margin-bottom: 50px;
 }
 
+
+/* FOOTER */
 footer {
     background-color: #4A5568;
     color: white;
